# django_shop

./: .gitignore  dump.json  pyproject.toml
cart/: cart.py
config/: settings.py  urls.py
orders/: admin.py  models.py  tasks.py  views.py
shop/: models.py  urls.py  views.py
templates/: base.html
templates/cart/: detail.html
templates/orders/order/: create.html  created.html
templates/shop/: base.html
templates/shop/product/: detail.html  list.html
