[tool.poetry]
name = "djnago-store"
version = "0.1.0"
description = ""
authors = ["Roman Popov <i@romanpopoff.ru>"]
readme = "README.md"
packages = [{include = "djnago_store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
pillow = "^9.5.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
